--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="dataBinding_content">DataBinding工具使用Demo</string>
     <string name="constraintLayout_content">ConstraintLayout约束布局的使用</string>
     <string name="sqlite_content">Sqlite数据库的基本使用</string>
+    <string name="dbflow_content">DBFlow数据库的基本使用</string>
 </resources>
