--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="constraintLayout_content">ConstraintLayout约束布局的使用</string>
     <string name="sqlite_content">Sqlite数据库的基本使用</string>
     <string name="dbflow_content">DBFlow数据库的基本使用</string>
+    <string name="anim_content">android动画练习demo</string>
 </resources>
