--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="sqlite_content">Sqlite数据库的基本使用</string>
     <string name="dbflow_content">DBFlow数据库的基本使用</string>
     <string name="anim_content">android动画练习demo</string>
+    <string name="list_page_content">android列表分页显示</string>
 </resources>
