--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="dbflow_content">DBFlow数据库的基本使用</string>
     <string name="anim_content">android动画练习demo</string>
     <string name="list_page_content">android列表分页显示</string>
+    <string name="notification_test_content">Android通知学习</string>
     <string name="annotation_content">简单内容练习</string>
 </resources>
