--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="list_page_content">android列表分页显示</string>
     <string name="notification_test_content">Android通知学习</string>
     <string name="annotation_content">简单内容练习</string>
+    <string name="sensor_content">摇一摇Demo</string>
 </resources>
