--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="notification_test_content">Android通知学习</string>
     <string name="annotation_content">简单内容练习</string>
     <string name="qr_code_content">二维码扫描</string>
+    <string name="coordinator_content">CoordinatorLayout</string>
     <string name="sensor_content">摇一摇Demo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
