--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,19 @@
 <resources>
     <string name="app_name">DemoWork1</string>
+    <string name="intent_service_content">IntentService测试</string>
     <string name="recyclerview_content">Recyclerview原生代码Demo，用来测试添加头部和尾部，框架抽离尝试</string>
-    <string name="litepal_content">LitePal数据库框架基本使用练习</string>
     <string name="dataBinding_content">DataBinding工具使用Demo</string>
     <string name="constraintLayout_content">ConstraintLayout约束布局的使用</string>
     <string name="sqlite_content">Sqlite数据库的基本使用</string>
-    <string name="dbflow_content">DBFlow数据库的基本使用</string>
     <string name="anim_content">android动画练习demo</string>
     <string name="list_page_content">android列表分页显示</string>
     <string name="notification_test_content">Android通知学习</string>
-    <string name="annotation_content">简单内容练习</string>
+    <string name="annotation_content">1.注解练习 2.代码内运行adb指令</string>
     <string name="service_content">Service练习</string>
     <string name="qr_code_content">二维码扫描</string>
     <string name="coordinator_content">CoordinatorLayout</string>
     <string name="sensor_content">摇一摇Demo</string>
+    <string name="adb_shell_cmd_content">代码内执行adb指令</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
